# OpenGL

./: .gitmodules  CMakeLists.txt  OpenGL.sln  README.md
OpenGL/: OpenGL.vcxproj  OpenGL.vcxproj.filters
OpenGL/res/shaders/: Basic.shader
OpenGL/src/: Application.cpp  Camera.cpp  Camera.h  IndexBuffer.cpp  Renderer.h  Shader.h  Vertex.h  VertexArray.h  VertexBufferLayout.h
dep/glad/: CMakeLists.txt
dep/glad/include/glad/: glad.h
dep/glad/src/: glad.c
res/shaders/: Basic.shader
src/: .editorconfig  Application.cpp  Application.h  CMakeLists.txt  Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  Core.cpp  Core.h  Event.h  GraphicsContext.cpp  GraphicsContext.h  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Vertex.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h  Window.cpp  Window.h  main.cpp
